# cogitatio

./: .gitignore  README.md  planning.md  pyproject.toml
src/cogitatio/: __init__.py  dataset.py  model.py  trainer.py
src/cogitatio/scripts/: train.py  train_baseline.py  train_random.py  train_traditional.py
